--- a/Factory Engin3D/Factory Engin3D.vcxproj.filters
+++ b/Factory Engin3D/Factory Engin3D.vcxproj.filters
@@ -393,6 +393,9 @@
     <ClInclude Include="ModuleResources.h">
       <Filter>Sources\Modules</Filter>
     </ClInclude>
+    <ClInclude Include="imgui-1.65\imgui_dock.h">
+      <Filter>Sources\Containers\ImGui</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleCamera3D.cpp">
@@ -610,6 +613,9 @@
     </ClCompile>
     <ClCompile Include="PanelTime.cpp">
       <Filter>Sources\Modules\ImGui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui-1.65\imgui_dock.cpp">
+      <Filter>Sources\Containers\ImGui</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
