--- a/Factory Engin3D/Game/imgui.ini
+++ b/Factory Engin3D/Game/imgui.ini
@@ -1,6 +1,198 @@
+[Dock][panel:]
+[Dock][Size:3]
+[Dock][Dock:0]
+label=Console##
+x=558
+y=81
+size_x=153
+size_y=33
+active=1
+opened=1
+location=
+status=0
+prev=-1
+next=-1
+child0=-1
+child1=-1
+parent=2
+[Dock][Dock:1]
+label=Assets##
+x=558
+y=52
+size_x=153
+size_y=33
+active=1
+opened=1
+location=
+status=0
+prev=-1
+next=-1
+child0=-1
+child1=-1
+parent=2
+[Dock][Dock:2]
+label=(null)
+x=558
+y=81
+size_x=153
+size_y=4
+active=1
+opened=0
+location=
+status=0
+prev=-1
+next=-1
+child0=0
+child1=1
+parent=-1
+[Dock][panel:-.-]
+[Dock][Size:3]
+[Dock][Dock:0]
+label=Console##-.-
+x=2
+y=541
+size_x=474
+size_y=314
+active=1
+opened=1
+location=
+status=0
+prev=-1
+next=-1
+child0=-1
+child1=-1
+parent=2
+[Dock][Dock:1]
+label=Assets##-.-
+x=476
+y=541
+size_x=480
+size_y=314
+active=1
+opened=1
+location=
+status=0
+prev=-1
+next=-1
+child0=-1
+child1=-1
+parent=2
+[Dock][Dock:2]
+label=(null)
+x=2
+y=541
+size_x=954
+size_y=314
+active=1
+opened=0
+location=
+status=0
+prev=-1
+next=-1
+child0=0
+child1=1
+parent=-1
+[Dock][panel:Debug##Default]
+[Dock][Size:2]
+[Dock][Dock:0]
+label=Console##Debug##Default
+x=6
+y=588
+size_x=943
+size_y=267
+active=1
+opened=1
+location=
+status=0
+prev=-1
+next=1
+child0=-1
+child1=-1
+parent=-1
+[Dock][Dock:1]
+label=Assets##Debug##Default
+x=6
+y=588
+size_x=943
+size_y=267
+active=0
+opened=1
+location=
+status=0
+prev=0
+next=-1
+child0=-1
+child1=-1
+parent=-1
+[Dock][panel:DockDown]
+[Dock][Size:2]
+[Dock][Dock:0]
+label=Console##DockDown
+x=6
+y=576
+size_x=927
+size_y=274
+active=0
+opened=1
+location=
+status=0
+prev=-1
+next=1
+child0=-1
+child1=-1
+parent=-1
+[Dock][Dock:1]
+label=Assets##DockDown
+x=6
+y=576
+size_x=927
+size_y=274
+active=1
+opened=1
+location=
+status=0
+prev=0
+next=-1
+child0=-1
+child1=-1
+parent=-1
+[Dock][panel:DockLeft]
+[Dock][Size:1]
+[Dock][Dock:0]
+label=Scene##DockLeft
+x=9
+y=27
+size_x=287
+size_y=547
+active=1
+opened=1
+location=
+status=0
+prev=-1
+next=-1
+child0=-1
+child1=-1
+parent=-1
+[Dock][panel:DockRight]
+[Dock][Size:1]
+[Dock][Dock:0]
+label=Transform##DockRight
+x=954
+y=26
+size_x=318
+size_y=830
+active=1
+opened=1
+location=
+status=0
+prev=-1
+next=-1
+child0=-1
+child1=-1
+parent=-1
 [Window][Debug##Default]
-Pos=2,23
-Size=400,200
+Pos=-2,561
+Size=959,302
 Collapsed=0
 
 [Window][Hello World!]
@@ -24,28 +216,28 @@ Size=601,257
 Collapsed=0
 
 [Window][About]
-Pos=955,520
-Size=325,340
-Collapsed=0
+Pos=1432,614
+Size=487,401
+Collapsed=1
 
 [Window][Configuration]
-Pos=355,575
-Size=600,287
+Pos=532,679
+Size=900,339
 Collapsed=0
 
 [Window][Transform]
-Pos=955,315
-Size=325,206
+Pos=958,18
+Size=323,852
 Collapsed=0
 
 [Window][Console]
-Pos=0,575
-Size=355,287
+Pos=-8,561
+Size=370,304
 Collapsed=0
 
 [Window][Scene]
-Pos=0,225
-Size=295,354
+Pos=0,18
+Size=311,525
 Collapsed=0
 
 [Window][]
@@ -54,7 +246,42 @@ Size=185,40
 Collapsed=0
 
 [Window][Assets]
-Pos=355,575
+Pos=359,572
 Size=600,287
+Collapsed=0
+
+[Window][Assets##Debug##Default]
+Pos=650,453
+Size=774,589
+Collapsed=0
+
+[Window][Console##]
+Pos=376,75
+Size=576,257
+Collapsed=0
+
+[Window][-.-]
+Pos=-6,533
+Size=970,330
+Collapsed=0
+
+[Window][DockRight]
+Pos=946,18
+Size=334,846
+Collapsed=0
+
+[Window][DockLeft]
+Pos=1,19
+Size=303,563
+Collapsed=0
+
+[Window][DockDown]
+Pos=-2,568
+Size=943,290
+Collapsed=0
+
+[Window][Assets##DockDown]
+Pos=425,717
+Size=932,275
 Collapsed=0
 
