dont do every frame ImGui::OpenPopup

--- a/Factory Engin3D/Game/imgui.ini
+++ b/Factory Engin3D/Game/imgui.ini
@@ -124,6 +124,38 @@ next=-1
 child0=-1
 child1=-1
 parent=-1
+[Dock][panel:Dock Window]
+[Dock][Size:2]
+[Dock][Dock:0]
+label=Console##Dock Window
+x=68
+y=68
+size_x=198
+size_y=139
+active=0
+opened=1
+location=
+status=0
+prev=-1
+next=1
+child0=-1
+child1=-1
+parent=-1
+[Dock][Dock:1]
+label=Assets##Dock Window
+x=68
+y=68
+size_x=198
+size_y=139
+active=1
+opened=1
+location=
+status=0
+prev=0
+next=-1
+child0=-1
+child1=-1
+parent=-1
 [Dock][panel:DockDown]
 [Dock][Size:2]
 [Dock][Dock:0]
@@ -283,5 +315,10 @@ Collapsed=0
 [Window][Assets##DockDown]
 Pos=425,717
 Size=932,275
+Collapsed=0
+
+[Window][Dock Window]
+Pos=60,60
+Size=214,155
 Collapsed=0
 
