improve Octree refreshes
when we do CTRL-Z octree goes one step behind games objects

--- a/Factory Engin3D/Game/imgui.ini
+++ b/Factory Engin3D/Game/imgui.ini
@@ -156,6 +156,53 @@ next=-1
 child0=-1
 child1=-1
 parent=-1
+[Dock][panel:Dock windows]
+[Dock][Size:3]
+[Dock][Dock:0]
+label=Console##Dock windows
+x=8
+y=550
+size_x=471
+size_y=307
+active=1
+opened=1
+location=
+status=0
+prev=-1
+next=-1
+child0=-1
+child1=-1
+parent=2
+[Dock][Dock:1]
+label=Assets##Dock windows
+x=479
+y=550
+size_x=472
+size_y=307
+active=1
+opened=1
+location=
+status=0
+prev=-1
+next=-1
+child0=-1
+child1=-1
+parent=2
+[Dock][Dock:2]
+label=(null)
+x=8
+y=550
+size_x=943
+size_y=307
+active=1
+opened=0
+location=
+status=0
+prev=-1
+next=-1
+child0=0
+child1=1
+parent=-1
 [Dock][panel:DockDown]
 [Dock][Size:2]
 [Dock][Dock:0]
@@ -320,5 +367,10 @@ Collapsed=0
 [Window][Dock Window]
 Pos=60,60
 Size=214,155
+Collapsed=0
+
+[Window][Dock windows]
+Pos=0,542
+Size=959,323
 Collapsed=0
 
