new menu for hierarchy objects
have to improve popup

--- a/Factory Engin3D/Game/imgui.ini
+++ b/Factory Engin3D/Game/imgui.ini
@@ -1,3 +1,35 @@
+[Dock][panel:Dock windows]
+[Dock][Size:2]
+[Dock][Dock:0]
+label=Console##Dock windows
+x=8
+y=550
+size_x=943
+size_y=307
+active=0
+opened=1
+location=
+status=0
+prev=-1
+next=1
+child0=-1
+child1=-1
+parent=-1
+[Dock][Dock:1]
+label=Assets##Dock windows
+x=8
+y=550
+size_x=943
+size_y=307
+active=1
+opened=1
+location=
+status=0
+prev=0
+next=-1
+child0=-1
+child1=-1
+parent=-1
 [Window][Debug##Default]
 Pos=-2,561
 Size=959,302
@@ -9,7 +41,7 @@ Size=351,555
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=310,36
+Pos=308,39
 Size=935,640
 Collapsed=0
 
