--- a/Factory Engin3D/Factory Engin3D.vcxproj.filters
+++ b/Factory Engin3D/Factory Engin3D.vcxproj.filters
@@ -420,7 +420,9 @@
     <ClInclude Include="ParticlePlane.h">
       <Filter>Sources\GameObject\Geometries</Filter>
     </ClInclude>
-    <ClInclude Include="ManagerParticle.h" />
+    <ClInclude Include="ManagerParticle.h">
+      <Filter>Sources\Manager</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleCamera3D.cpp">
@@ -657,6 +659,8 @@
     <ClCompile Include="ParticlePlane.cpp">
       <Filter>Sources\GameObject\Geometries</Filter>
     </ClCompile>
-    <ClCompile Include="ManagerParticle.cpp" />
+    <ClCompile Include="ManagerParticle.cpp">
+      <Filter>Sources\Manager</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
