--- a/Factory Engin3D/Factory Engin3D.vcxproj
+++ b/Factory Engin3D/Factory Engin3D.vcxproj
@@ -181,6 +181,7 @@
     <ClInclude Include="ModuleWindow.h" />
     <ClInclude Include="parson\parson.h" />
     <ClInclude Include="Geometry.h" />
+    <ClInclude Include="Particle.h" />
     <ClInclude Include="ParticlePlane.h" />
     <ClInclude Include="pcg-c-basic-0.9\pcg_basic.h" />
     <ClInclude Include="Octree.h" />
@@ -262,6 +263,7 @@
     <ClCompile Include="PanelResources.cpp" />
     <ClCompile Include="parson\parson.c" />
     <ClCompile Include="Geometry.cpp" />
+    <ClCompile Include="Particle.cpp" />
     <ClCompile Include="ParticlePlane.cpp" />
     <ClCompile Include="pcg-c-basic-0.9\pcg_basic.c" />
     <ClCompile Include="Octree.cpp" />
