--- a/Factory Engin3D/Factory Engin3D.vcxproj.filters
+++ b/Factory Engin3D/Factory Engin3D.vcxproj.filters
@@ -357,23 +357,8 @@
     <ClInclude Include="ModuleImporter.h">
       <Filter>Sources\Modules</Filter>
     </ClInclude>
-    <ClInclude Include="Light.h">
-      <Filter>Sources\GameObject\Component</Filter>
-    </ClInclude>
-    <ClInclude Include="Camera.h">
-      <Filter>Sources\GameObject\Component</Filter>
-    </ClInclude>
     <ClInclude Include="GameObject.h">
       <Filter>Sources\GameObject</Filter>
-    </ClInclude>
-    <ClInclude Include="Texture.h">
-      <Filter>Sources\GameObject\Component</Filter>
-    </ClInclude>
-    <ClInclude Include="Component.h">
-      <Filter>Sources\GameObject\Component</Filter>
-    </ClInclude>
-    <ClInclude Include="Transform.h">
-      <Filter>Sources\GameObject\Component</Filter>
     </ClInclude>
     <ClInclude Include="ModulePicking.h">
       <Filter>Sources\Modules</Filter>
@@ -414,9 +399,6 @@
     <ClInclude Include="Event.h">
       <Filter>Sources\Tools</Filter>
     </ClInclude>
-    <ClInclude Include="Billboard.h">
-      <Filter>Sources\GameObject\Component</Filter>
-    </ClInclude>
     <ClInclude Include="ParticlePlane.h">
       <Filter>Sources\GameObject\Geometries</Filter>
     </ClInclude>
@@ -426,7 +408,27 @@
     <ClInclude Include="Particle.h">
       <Filter>Sources\GameObject\Particles</Filter>
     </ClInclude>
-    <ClInclude Include="ComponentEmitter.h" />
+    <ClInclude Include="ComponentEmitter.h">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="ComponentBillboard.h">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="ComponentCamera.h">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="ComponentLight.h">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="ComponentTexture.h">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="ComponentTransform.h">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleCamera3D.cpp">
@@ -582,20 +584,8 @@
     <ClCompile Include="ModuleImporter.cpp">
       <Filter>Sources\Modules</Filter>
     </ClCompile>
-    <ClCompile Include="Light.cpp">
-      <Filter>Sources\GameObject\Component</Filter>
-    </ClCompile>
-    <ClCompile Include="Camera.cpp">
-      <Filter>Sources\GameObject\Component</Filter>
-    </ClCompile>
     <ClCompile Include="GameObject.cpp">
       <Filter>Sources\GameObject</Filter>
-    </ClCompile>
-    <ClCompile Include="Texture.cpp">
-      <Filter>Sources\GameObject\Component</Filter>
-    </ClCompile>
-    <ClCompile Include="Transform.cpp">
-      <Filter>Sources\GameObject\Component</Filter>
     </ClCompile>
     <ClCompile Include="ModulePicking.cpp">
       <Filter>Sources\Modules</Filter>
@@ -657,9 +647,6 @@
     <ClCompile Include="imgui-1.65\imgui_dock.cpp">
       <Filter>Sources\Containers\ImGui</Filter>
     </ClCompile>
-    <ClCompile Include="Billboard.cpp">
-      <Filter>Sources\GameObject\Component</Filter>
-    </ClCompile>
     <ClCompile Include="ParticlePlane.cpp">
       <Filter>Sources\GameObject\Geometries</Filter>
     </ClCompile>
@@ -669,6 +656,23 @@
     <ClCompile Include="Particle.cpp">
       <Filter>Sources\GameObject\Particles</Filter>
     </ClCompile>
-    <ClCompile Include="ComponentEmitter.cpp" />
+    <ClCompile Include="ComponentEmitter.cpp">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClCompile>
+    <ClCompile Include="ComponentBillboard.cpp">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClCompile>
+    <ClCompile Include="ComponentCamera.cpp">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClCompile>
+    <ClCompile Include="ComponentLight.cpp">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClCompile>
+    <ClCompile Include="ComponentTexture.cpp">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClCompile>
+    <ClCompile Include="ComponentTransform.cpp">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
