--- a/Factory Engin3D/Factory Engin3D.vcxproj.filters
+++ b/Factory Engin3D/Factory Engin3D.vcxproj.filters
@@ -70,11 +70,11 @@
     <Filter Include="Sources\Resources">
       <UniqueIdentifier>{e22c8b64-62e6-490b-bc5c-d3a4cedfed9c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Sources\Manager">
-      <UniqueIdentifier>{8c27a2c8-bf40-40df-970f-e793994ba1dc}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Sources\GameObject\Particles">
       <UniqueIdentifier>{cdeeb3e0-4cb2-464b-8c47-fe4726ea0e66}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Sources\Modules\Particle">
+      <UniqueIdentifier>{8c27a2c8-bf40-40df-970f-e793994ba1dc}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -402,9 +402,6 @@
     <ClInclude Include="ParticlePlane.h">
       <Filter>Sources\GameObject\Geometries</Filter>
     </ClInclude>
-    <ClInclude Include="ManagerParticle.h">
-      <Filter>Sources\Manager</Filter>
-    </ClInclude>
     <ClInclude Include="Particle.h">
       <Filter>Sources\GameObject\Particles</Filter>
     </ClInclude>
@@ -428,6 +425,9 @@
     </ClInclude>
     <ClInclude Include="Component.h">
       <Filter>Sources\GameObject\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleParticles.h">
+      <Filter>Sources\Modules\Particle</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -650,9 +650,6 @@
     <ClCompile Include="ParticlePlane.cpp">
       <Filter>Sources\GameObject\Geometries</Filter>
     </ClCompile>
-    <ClCompile Include="ManagerParticle.cpp">
-      <Filter>Sources\Manager</Filter>
-    </ClCompile>
     <ClCompile Include="Particle.cpp">
       <Filter>Sources\GameObject\Particles</Filter>
     </ClCompile>
@@ -673,6 +670,9 @@
     </ClCompile>
     <ClCompile Include="ComponentTransform.cpp">
       <Filter>Sources\GameObject\Component</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleParticles.cpp">
+      <Filter>Sources\Modules\Particle</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
