--- a/Factory Engin3D/Factory Engin3D.vcxproj.filters
+++ b/Factory Engin3D/Factory Engin3D.vcxproj.filters
@@ -674,5 +674,8 @@
     <ClCompile Include="ModuleParticles.cpp">
       <Filter>Sources\Modules\Particle</Filter>
     </ClCompile>
+    <ClCompile Include="PanelGameTime.cpp">
+      <Filter>Sources\Modules\ImGui</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
