--- a/Factory Engin3D/Game/imgui.ini
+++ b/Factory Engin3D/Game/imgui.ini
@@ -4,7 +4,7 @@
 label=Console##Dock windows
 x=8
 y=600
-size_x=994
+size_x=954
 size_y=254
 active=0
 opened=1
@@ -19,7 +19,7 @@ parent=-1
 label=Assets##Dock windows
 x=8
 y=600
-size_x=994
+size_x=954
 size_y=254
 active=1
 opened=1
@@ -36,8 +36,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=990,18
-Size=310,850
+Pos=970,18
+Size=310,852
 Collapsed=0
 
 [Window][Scene]
@@ -47,12 +47,12 @@ Collapsed=0
 
 [Window][Dock windows]
 Pos=0,592
-Size=990,270
+Size=970,270
 Collapsed=0
 
 [Window][]
-Pos=550,25
-Size=185,40
+Pos=602,287
+Size=194,90
 Collapsed=0
 
 [Window][Configuration]
@@ -68,5 +68,15 @@ Collapsed=0
 [Window][Save scene]
 Pos=704,236
 Size=67,71
+Collapsed=0
+
+[Window][PlayingButtons]
+Pos=550,25
+Size=185,40
+Collapsed=0
+
+[Window][GameSimulate]
+Pos=769,507
+Size=182,58
 Collapsed=0
 
