Take off Gametimer in Particle && buttons change
fixed bug that made more particules every time that you play game
Change size and text buttons for better understanding

--- a/Factory Engin3D/Game/imgui.ini
+++ b/Factory Engin3D/Game/imgui.ini
@@ -2,11 +2,11 @@
 [Dock][Size:2]
 [Dock][Dock:0]
 label=Console##Dock windows
-x=8
-y=600
+x=7
+y=599
 size_x=954
 size_y=254
-active=0
+active=1
 opened=1
 location=
 status=1
@@ -78,5 +78,10 @@ Collapsed=0
 [Window][GameSimulate]
 Pos=768,509
 Size=182,58
+Collapsed=0
+
+[Window][Console##Dock windows]
+Pos=7,599
+Size=954,254
 Collapsed=0
 
